build data custom gradle task

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,6 @@ tasks.register('generateBuildData', Exec) {
     }
 }
 
-compileJava {
-    dependsOn tasks.named('generateBuildData')
-}
+//compileJava {
+//    dependsOn tasks.named('generateBuildData')
+//}
