--- a/src/test/resources/opentsdb.conf
+++ b/src/test/resources/opentsdb.conf
@@ -13,3 +13,4 @@ tsd.storage.hbase.data_table = tsdb
 tsd.storage.hbase.meta_table = tsdb-meta
 tsd.storage.hbase.tree_table = tsdb-tree
 tsd.storage.hbase.uid_table = tsdb-uid
+tsd.core.enable_ui = false
